# utube-search

./: Readme.md  pyproject.toml
src/utube_search/: api.py  cli.py  config.py  exceptions.py  search.py
tests/: test_yt_search.py
